# skm-football

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/app/: games.parquet  moments.parquet  player_leaderboard.parquet  player_names.parquet  player_skm_v2.parquet  player_skm_v3.parquet
docs/: BLOG_RESULTS.md  BUILD_PLAN.md  CASE_STUDIES.md  COMPLETE_BUILD_PLAN.md  CV_PILOT.md  DEPLOY.md  PICKUP.md  RELATED_WORK.md  RESULTS.md  ROADMAP.md  SKM_MARKET_POSITIONING.md  VIDEO_INTELLIGENCE.md  WORKED_EXAMPLE.md
notebooks/: 01_explore_events.ipynb  02_skm_leaderboard.ipynb  03_validation_benchmarks.ipynb
scripts/: build_events.py  fix_phase2_deps.sh  make_app_bundle.py  print_top_players.py  propagate_d360.py  publish_to_github.sh  run_full_phase2.sh  setup_venv.sh  validation_benchmarks.py  worked_example.py
src/skm/: __init__.py  config.py
src/skm/data/: __init__.py  download.py  features.py  pipeline.py
src/skm/models/: __init__.py  booster_compat.py  context.py  control.py  credits.py  difficulty.py  freeze_frame.py  moments.py  phase6.py  pipeline.py  preference.py  role.py  skm_combine.py  spadl_convert.py  vaep_delta.py  vaep_sklearn.py  weights.py  xthreat_value.py
src/skm/video/: __init__.py  calibration.py  detect_track.py  pilot.py  (+1 more)
tests/: test_control_credits.py  test_features.py  test_freeze_frame.py  test_moments.py  test_phase6.py  test_preference.py  test_replay.py  test_skm_combine.py  test_validation.py  test_video_pilot.py  test_weights.py
(+10 files in other folders)
